# src/routes/bills.routes.js
@@ -1,0 +1,13 @@
+import {Router} from 'express';
+import {
+    createBill, 
+    getBills, 
+    getBill} from '../controllers/bills.controller.js';
+
+const router = Router()
+
+router.get('/bills', getBills);
+router.post('/bills', createBill);
+router.get('/bills/:id', getBill);
+
+export default router
