# swagger_output.json
@@ -1,4 +1,5 @@
 {
+  "swagger": "2.0",
   "openapi": "3.0.0",
   "info": {
     "title": "Pizza Store API",
@@ -21,10 +22,13 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/myReferencedBillArray"
+                  "$ref": "#/definitions/myReferencedBillArray"
                 }
               }
             }
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -37,10 +41,13 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Bill"
+                  "$ref": "#/definitions/Bill"
                 }
               }
             }
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -48,24 +55,22 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Bill"
+                "$ref": "#/definitions/Bill"
               }
             }
           }
         }
       }
     },
-    "/bills/{numero}": {
+    "/bills/{id}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "numero",
+            "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -74,13 +79,16 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Bill"
+                  "$ref": "#/definitions/Bill"
                 }
               }
             }
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -91,7 +99,7 @@
       "Bill": {
         "type": "object",
         "properties": {
-          "numero": {
+          "id": {
             "type": "string",
             "description": "numero de la boleta",
             "example": "015673"
@@ -101,34 +109,34 @@
             "description": "sub total de la boleta",
             "example": 99.99
           },
-          "cajero": {
+          "attendedby": {
             "type": "string",
             "description": "persona que cobro el servicio",
             "example": "Carlos Reyes"
           },
-          "estado": {
+          "state": {
             "type": "string",
             "description": "estado del servicio",
             "example": "Despachado"
           },
-          "producto": {
+          "product": {
             "type": "string",
             "description": "nombre del producto",
             "example": "Americana"
           }
         },
         "example": {
-          "numero": "015673",
+          "id": "015673",
           "subtotal": 99.99,
-          "cajero": "Carlos Reyes",
-          "estado": "Despachado",
-          "producto": "Americana"
+          "attendedby": "Carlos Reyes",
+          "state": "Despachado",
+          "product": "Americana"
         }
       },
       "myReferencedBillArray": {
         "type": "array",
         "items": {
-          "$ref": "#/components/schemas/Bill"
+          "$ref": "#/definitions/Bill"
         }
       }
     }
